separate library part, use auxiliary tools directory `build-aux`

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
 *.log
+*/.deps
+*/.libs
 INSTALL
 Makefile
 Makefile.in
 aclocal.m4
 autom4te.cache/
+build-aux
 config.*
 configure
-depcomp
-install-sh
-missing
-src/.deps
+lib/libtd.la
+lib/td.lo
+libtool
+m4
 src/td
 stamp-h1
 td-*.*.*
