--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,11 @@
 
 AC_PREREQ([2.69])
 AC_INIT([td], [0.0.0], [livibetter@gmail.com])
+AC_CONFIG_AUX_DIR([build-aux])
+AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([foreign -Wall -Werror])
+AM_PROG_AR
+LT_INIT
 AC_CONFIG_SRCDIR([src/main.c])
 AC_CONFIG_HEADERS([config.h])
 
@@ -20,5 +24,5 @@ AC_CHECK_HEADER_STDBOOL
 
 # Checks for library functions.
 
-AC_CONFIG_FILES([Makefile src/Makefile])
+AC_CONFIG_FILES([Makefile lib/Makefile src/Makefile])
 AC_OUTPUT
