add --disable-bash and --disable-c to configure; install, tests (Check and Autotest), benchmark skip disabled implementation

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,10 +1,21 @@
-AM_CFLAGS = -std=c99 -Wall -Wextra
-AM_CPPFLAGS = -I$(srcdir)/../lib
+# ensure all output files will be cleaned despite the used options changeing
+# in invoking ./configure
 
-bin_PROGRAMS = td
-dist_bin_SCRIPTS = td.sh
+bin_PROGRAMS__     = td
+dist_bin_SCRIPTS__ = td.sh
 
-td_SOURCES = main.c
-td_LDADD = $(top_builddir)/lib/libtd.la
+if ENABLE_C
+  AM_CFLAGS   = -std=c99 -Wall -Wextra
+  AM_CPPFLAGS = -I$(srcdir)/../lib
 
-CLEANFILES = $(dist_bin_SCRIPTS)
+  bin_PROGRAMS = $(bin_PROGRAMS__)
+
+  td_SOURCES = main.c
+  td_LDADD   = $(top_builddir)/lib/libtd.la
+endif
+
+if ENABLE_BASH
+  dist_bin_SCRIPTS = $(dist_bin_SCRIPTS__)
+endif
+
+CLEANFILES = $(bin_PROGRAMS__) $(dist_bin_SCRIPTS__)
